added necessary fields to metrics
