# application/serializers/UserSerializer.js
@@ -11,6 +11,8 @@ const serializeUser = (user) => ({
   subscriptionExpirationDate: user.subscriptionExpirationDate,
   favoriteCourses: user.favoriteCourses,
   description: user.description,
+  registerType: user.registerType,
+  loginType: user.loginType
 });
 
 module.exports = (data) => {
